# plan_3y

./: app.py  coverage_tab.py  default_values.json  fig_coverage.py  fig_downtime_by_years.py  fig_ktg_by_weeks.py  fig_ktg_by_years.py  fig_piechart_downtime_by_categories.py  fig_planned_3y_ktg.py  fig_table_maintanance.py  functions.py  initial_values.py  ktg_by_month_models.py  ktg_table_html.py  maintanance_chart_tab.py  maintanance_jobs_df_delete.csv  pyproject.toml  settings_tab.py  title_text.py
data/: df1_delete.csv  df_01.csv  df_delete.csv  downtime_calendar_fond_df_delete.csv  downtime_data_table.csv  downtime_month_year_df_delete.csv  eo_calendar_fond.csv  eo_job_catologue.csv  eo_list.csv  eo_list_data_temp.csv  eo_list_upload_delete.csv  eo_maint_plan_delete.csv  eo_maintanance_job_code_last_date.csv  eo_maintanance_plan_update_start_date_df.csv  eo_maintanance_plan_with_start_date_df.csv  eo_models.csv  full_eo_list (copy).csv  full_eo_list.csv  full_eo_list_komatsu.csv  ktg_by_months.csv  last_maint_date.csv  level_2_list.csv  maintanance_category.csv  maintanance_job_list.csv  maintanance_job_list_general.csv  maintanance_job_list_general___.csv  maintanance_job_list_general_actual.csv  maintanance_job_list_general_komatsy.csv  maintanance_jobs__for_zero_dowtime_groupped_delete.csv  maintanance_jobs_df.csv  maintanance_jobs_df_before_ktg_model.csv  maintanance_jobs_df_before_maintanance_category_filter  maintanance_jobs_df_level_upper_delete.csv  maintanance_matrix.csv  maintanence_chart.csv  matrix_df.csv  matrix_df_delete.csv  result_table_delete.csv  (+4 more)
