[tool.poetry]
name = "repl_python3_plan3y"
version = "0.1.0"
description = ""
authors = ["Zhenya1975 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
dash-bootstrap-components = "^1.0.3"
plotly = "^5.5.0"
dash = "^2.1.0"
dash-bootstrap-templates = "^1.0.4"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
